add collect and DeckOfCards class

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "php-ds/php-ds": "^1.2"
+        "php-ds/php-ds": "^1.2",
+        "tightenco/collect": "^6.4"
     } 
 }
