need more brain for solution Booking task

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "php-ds/php-ds": "^1.2",
-        "tightenco/collect": "^6.4"
+        "tightenco/collect": "^6.4",
+        "nesbot/carbon": "^2.27"
     } 
 }
